replace `Collectors.toList()` with `toList()`